--- a/wally.toml
+++ b/wally.toml
@@ -1,8 +1,14 @@
 [package]
-name = "sebas/discordbridge"
-version = "0.1.0"
+name = "sebastian2852/discordbridge"
+version = "1.0.0"
+description = "A lightweight wrapper for discord webhooks"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
-private = true
+
+authors = ["Void Labs Development", "sebastian2852"]
+private = false
+
+exclude = ["**"]
+include = ["default.project.json", "Lib", "Lib/**", "LICENSE", "wally.toml"]
 
 [dependencies]
